tdf#105238 : return error when SHEETS argument is not a reference.

Change-Id: I9c93762b6bfe800d4843070fece2834d544cea13